<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment2_rt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pedemari.rr@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend> 
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xterm</exec_depend>
  <exec_depend>custom_message</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>


<build_depend>ament_cmake</build_depend>
<build_depend>ament_python</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>custom_message</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>nav_msgs</build_depend>


  <export>
    <build_type>ament_python</build_type>


    <launch>
       <file>launch/launch.py</file>
    </launch>
  </export>


</package>
